fixed alignment issues
- added new parameter for animator to make it act as a div
- reworked benefits.css

--- a/src/styles/benefits.css
+++ b/src/styles/benefits.css
@@ -2,19 +2,17 @@
 
 @layer components {
   .benefit-section {
-    @apply min-h-screen p-6 md:p-10 py-10 flex flex-col lg:flex-row;
-  }
-
-  .benefit-left-side-content,
-  .benefit-right-side-content {
-    @apply flex flex-col flex-1 basis-1/2 justify-center p-6 gap-10 min-w-0;
-  }
-
-  .benefit-right-side-content {
-    @apply text-end;
+    @apply min-h-screen p-6 md:p-10 py-10 flex flex-col lg:flex-row items-center;
   }
 
   .benefit-section p {
     @apply text-lg md:text-xl lg:text-2xl leading-relaxed;
+  }
+
+  .benefit-right-side-content {
+    @apply text-end flex flex-col w-full flex-1 basis-1/2 p-6 gap-10;
+  }
+  .benefit-left-side-content {
+    @apply flex flex-col w-full flex-1 basis-1/2 p-6 gap-10;
   }
 }
